fix scroll jump issue

--- a/src/components/Searchinput/SearchInput.css
+++ b/src/components/Searchinput/SearchInput.css
@@ -12,5 +12,5 @@
   box-sizing: border-box;
   font-size: 18px;
   padding: 10px 8px;
-  width: 100%;
+  width: 100vw;
 }
