--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+html {
+  margin-left: calc(100vw - 100%);
+  margin-right: 0;
+  overflow: auto;
+}
 body {
   margin: 0;
   padding: 0;
